--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,7 @@
    ],
    "source": [
     "salina = None \n",
-    "salina = cities[]\n",
+    "salina = cities[-3]\n",
     "salina\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
