--- a/index.ipynb
+++ b/index.ipynb
@@ -325,7 +325,7 @@
     {
      "data": {
       "text/plain": [
-       "[{'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}]"
+       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}"
       ]
      },
      "execution_count": 11,
@@ -334,7 +334,6 @@
     }
    ],
    "source": [
-    "salina = None \n",
     "salina = cities[-3]\n",
     "salina\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
