--- a/index.ipynb
+++ b/index.ipynb
@@ -319,22 +319,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}"
+       "{'City': 'Walla Walla Valley',\n",
+       " 'Country': 'USA',\n",
+       " 'Population': 32237,\n",
+       " 'Area': 33}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salina = cities[-3]\n",
+    "salina = cities[4]\n",
     "salina\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
