--- a/index.ipynb
+++ b/index.ipynb
@@ -351,12 +351,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'City': 'Walla Walla Valley',\n",
+       " 'Country': 'USA',\n",
+       " 'Population': 32237,\n",
+       " 'Area': 33}"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "los_cabos_popu = cities[4]\n",
-    "los_cabos"
+    "los_cabos_popu"
    ]
   },
   {
