Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -369,7 +369,7 @@
     }
    ],
    "source": [
-    "los_cabos_popu = cities[4]\n",
+    "los_cabos_popu = cities[4]['Populati']\n",
     "los_cabos_popu"
    ]
   },
