--- a/index.ipynb
+++ b/index.ipynb
@@ -319,25 +319,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Walla Walla Valley',\n",
-       " 'Country': 'USA',\n",
-       " 'Population': 32237,\n",
-       " 'Area': 33}"
+       "{'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "salina = cities[4]\n",
+    "salina = cities[-3]\n",
     "salina\n",
     "# {'Area': 27, 'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000}"
    ]
@@ -351,25 +348,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Walla Walla Valley',\n",
-       " 'Country': 'USA',\n",
-       " 'Population': 32237,\n",
-       " 'Area': 33}"
+       "32237"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "los_cabos_popu = cities[4]['Populati']\n",
+    "los_cabos_popu = cities[4]['Population']\n",
     "los_cabos_popu"
    ]
   },
