--- a/index.ipynb
+++ b/index.ipynb
@@ -467,7 +467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_keys = \n",
+    "pyeongchang_keys = citie\n",
     "\n",
     "\n",
     "pyeongchang_keys # ['City', 'Country', 'Population', 'Area']\n",
